fixed display error on small screens

--- a/style.css
+++ b/style.css
@@ -228,6 +228,12 @@ footer a:hover {
 
 /* Fix display error on very small screens */
 @media screen and (max-width: 200px) {
+
+ .topnav {
+  display: flex;
+  flex-direction: column;
+ }
+
  #navbarleft {
    display: flex;
    flex-direction: column;
